Releasing new package

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "mkdirp": "^0.5.1",
     "npid": "^0.4.0",
-    "terminate": "^2.1.0"
+    "terminate": "^2.1.0",
+    "the-check": "^1.2.2",
+    "yesno": "0.0.1"
   },
   "devDependencies": {
     "mocha": "^5.0.0",
