Releasing new package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-ps",
-  "description": "Process mamager for the-framework",
+  "description": "Process manager for the-framework",
   "version": "1.0.2",
   "author": {
     "name": "okunishinishi",
