--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/the-labo/the-ps/issues"
   },
   "dependencies": {
+    "asleep": "^1.0.3",
     "mkdirp": "^0.5.1",
     "npid": "^0.4.0",
     "ps-list": "^5.0.0",
@@ -21,8 +22,8 @@
   },
   "devDependencies": {
     "mocha": "^5.2.0",
-    "the-script-build": "^4.0.4",
-    "the-script-jsdoc": "^2.0.2",
+    "the-script-build": "^4.0.8",
+    "the-script-jsdoc": "^2.0.3",
     "the-script-release": "^1.0.6",
     "the-script-share": "^1.0.5",
     "the-script-update": "^2.0.0",
